SF Primes/src/objects/Account_Plan_Strategy_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_DataTable_Type__c</fullName>
        <description>This is the primitive type (&apos;string&apos;, &apos;numeric&apos;, &apos;date&apos; or &apos;html&apos;, etc.) of the field to be displayed in a DataTable.</description>
        <inlineHelpText>This is the primitive type (&apos;string&apos;, &apos;numeric&apos;, &apos;date&apos; or &apos;html&apos;, etc.) of the field to be displayed in a DataTable.</inlineHelpText>
        <label>Field DataTable Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Plan Strategy Field</label>
</CustomObject>